--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -23,6 +23,8 @@ body {
 	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: space-between;
+  max-width: 340px;
+  margin-left: auto;
 }
 .site .left-column ul.events li,
 .site .left-column .brand-logo,
@@ -55,12 +57,12 @@ body {
 }
 
 .site .right-column .info .data .title {
-  font-size: 20px;
+  font-size: 25px;
   color: #000;
 }
 
 .site .right-column .info .data .content {
-  font-size: 15px;
+  font-size: 20px;
   color: #666;
 }
 
