prevent text selection on scrolls

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -54,6 +54,9 @@ body {
   border-radius: 100px;
   margin: 0 auto;
   cursor: pointer;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .site .left-column  .events .scroll:first-child {
