--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -27,8 +27,8 @@ body {
   margin-left: auto;
 }
 .site .left-column .events .items-wrapper ul li,
-.site .left-column .brand-logo,
-.site .right-column {
+.site .right-column,
+.site .left-column .brand-logo .wrapper {
   background: rgba(255,255,255, 1);
   border-radius: 5px;
   padding: 15px;
@@ -36,10 +36,15 @@ body {
   -webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.8);
   box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.8);
 }
+.site .left-column .brand-logo {
+  padding: 15px;
+}
 
 .site .left-column .events .items-wrapper {
   height: 340px;
   overflow: hidden;
+  padding: 15px;
+  margin-top: -15px;
 }
 
 .site .left-column  .events .scroll {
@@ -186,7 +191,7 @@ body {
 
 
 
-.site .left-column .brand-logo img {
+.site .left-column .brand-logo .wrapper img {
   max-width: 100%;
   max-height: 100%;
 }
