full posts test & post layer changes

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -189,12 +189,75 @@ body {
   font-weight: bold;
 }
 
-
-
 .site .left-column .brand-logo .wrapper img {
   max-width: 100%;
   max-height: 100%;
 }
 
+.post {
+  background:#eee;
+  border: 20px solid #eee;
+  box-shadow: 0px 4px 30px rgba(0,0,0,.3);
+  text-align:initial;
+  font-weight:400;
+  font-style:normal;
+  text-decoration:none;
+  border-radius:10px;
+}
+.post > .content {
+  position:relative;
+  height:100%;
+  width:100%;
+  overflow: hidden;
+  border-radius: 10px;
+  border: 20px solid #fff;
+}
+.post > .content > .picture {
+  position: absolute;
+  left:0;
+  right: 0;
+  top:0;
+  bottom:0;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+
+}
+
+.post > .content > .message {
+  position: absolute;
+  right:0;
+  top:0;
+  bottom:0;
+  width: 100%;
+  padding: 20px;
+  background: #cecece;
+  font-size: 25px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.post > .content > .picture + .message {
+  width: 30%;
+  background:#f1f1f1;
+  font-size: 20px;
+  display: block;
+}
+
+.post > .content > .by {
+  position:absolute;
+  bottom: 0;
+  right: 0;
+  color:#333;
+  background-color: white;
+  padding: 10px 30px;
+  border-top-left-radius: 5px;
+  font-size: 15px;
+  line-height: 15px;
+  font-style: italic;
+}
 
 
