--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -230,21 +230,28 @@ body {
   top:0;
   bottom:0;
   width: 100%;
+  max-width: 100%;
   padding: 20px;
   background: #cecece;
-  font-size: 25px;
+  font-size: 30px;
   color: #333;
+  line-height: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  text-align: center;
 }
-
+.post > .content > .message > .wrapper {
+  white-space: pre-line;
+  margin-left:30px;
+}
 .post > .content > .picture + .message {
   width: 30%;
   background:#f1f1f1;
   font-size: 20px;
   display: block;
+  text-align: left;
+  line-height: 30px;
 }
 
 .post > .content > .by {
