--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -243,7 +243,7 @@ body {
   margin-left:20px;
 }
 .post > .content > .picture + .message {
-  width: 30%;
+  width: 300px;
   background:#f1f1f1;
   font-size: 20px;
   display: block;
@@ -263,5 +263,3 @@ body {
   line-height: 15px;
   font-style: italic;
 }
-
-
