--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -28,7 +28,7 @@ body {
 }
 .site .left-column .events .items-wrapper ul li,
 .site .right-column,
-.site .left-column .brand-logo .wrapper {
+.brand-logo .wrapper {
   background: rgba(255,255,255, 1);
   border-radius: 5px;
   padding: 15px;
@@ -36,7 +36,7 @@ body {
   -webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.8);
   box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.8);
 }
-.site .left-column .brand-logo {
+.brand-logo {
   padding: 15px;
 }
 
@@ -189,10 +189,11 @@ body {
   font-weight: bold;
 }
 
-.site .left-column .brand-logo .wrapper img {
+.brand-logo .wrapper img {
   max-width: 100%;
   max-height: 100%;
 }
+
 
 .post {
   background:#eee;
@@ -258,4 +259,15 @@ body {
   font-size: 15px;
   line-height: 15px;
   font-style: italic;
+}
+
+
+.floating-center {
+  position: absolute;
+  top:50%;
+  left:50%;
+  margin-left: -170px;
+  margin-top: -100px;
+  width: 340px;
+  height: 200px;
 }
