--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -273,15 +273,19 @@ body {
 
 .floating-center {
   position: absolute;
-  top:50%;
-  left:50%;
-  margin-left: -170px;
-  margin-top: -60px;
-  width: 340px;
-  height: 200px;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-align-items: center;
 }
 
 .floating-center img {
+  display: block;
+  max-width: 250px;
   width: 100%;
   height:auto;
 }
