--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -137,7 +137,7 @@ body {
   display: block;
   width: 100%;
   height: auto;
-  transition: margin 1000ms;
+  /**transition: margin 1000ms;**/
 }
 
 .site .left-column .events .items-wrapper ul li {
